--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                         <div class="col-0 menu colu-8" id="menuu">
                             <ul>
                                 <li><button id="boton" class="m modonocturno">MODO NOCTURNO</button></li>
-                                <li><a href="favorites.html" class="m">FAVORITOS</a></li>
-                                <li><a href="misgifs.html" class="m">MIS GIFOS</a></li>
+                                <li id="li"><a href="favorites.html" class="m">FAVORITOS</a></li>
+                                <li id="li"><a href="misgifs.html" class="m">MIS GIFOS</a></li>
 
                             </ul>
                         </div>
